k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wishdrop
  labels:
    app.kubernetes.io/name: wishdrop
